# CI-workshop

./: LICENSE  README.md  Taskfile.yml  pyproject.toml  requirements_dev.in  requirements_dev.txt  setup.cfg
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  example.env  startup.sh
.github/workflows/: tests.yml
src/: main.py
src/hello/: __init__.py  functions.py
tests/: test_src.py
