[metadata]
name = hello
description = example project
author = Aldrick Castro
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = 
    hello
python_requires = >=3.9
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9

[options.package_data]
hello = py.typed

# Flake8 Docs: https://flake8.pycqa.org/en/latest/user/index.html
[flake8]
max-line-length = 120
per-file-ignores = 
    __init__.py: F401
